2007-12-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/c.c:
   Fix parsing C arrays (broken in r1952, oops).


2007-12-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/build.c, src/keyfile.c, src/prefs.c, src/vte.c, src/vte.h:
   Use project's base dir and run command when running commands in the
   VTE.
   Add VTE preference to skip the generated run script. when running
   commands in the VTE.
   Make vte_cwd() accept also paths not only filenames.
 * geany.desktop.in.in: Avoid full path for icon entry.
 * geany.spec.in: Add file HACKING and classviewer icons.
 * Makefile.am: Prevent installing geany.desktop twice.


2007-12-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.desktop.in.in:
   Apply patch from Ubuntu package to match FD.o standards
   (thanks to Siegfried-Angel Gevatter Pujals).
 * plugins/classbuilder.c, plugins/htmlchars.c:
   Use pluginmacros.h.
 * src/highlighting.c, src/highlighting.h:
   Add highlighting_get_style().
 * plugins/pluginmacros.h, src/plugindata.h, src/plugins.c:
   Add highlighting_get_style() to the plugin API.
   Rename DocumentFuncs field in GeanyData struct to avoid name clashes.
 * doc/geany.html, doc/geany.txt, src/kebindings.c, src/keybindings.h:
   Add Move document first/last keybindings
   (patch by Catalin Marinas, thank you).
 * geany.glade, src/interface.c, src/keyfile.c, src/plugindata.h,
   src/prefs.c, src/prefs.h, src/ui_utils.c:
   Add toolbar items to increase/decrease indentation (closes #1850697).


2007-12-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/build.c: Fix Run command for HTML files when set to something
                else than "builtin".


2007-12-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.glade, src/interface.c, src/msgwindow.c, src/plugins.c:
   Set treeview rules hint for several treeviews and remove manual
   setting the background colour of odd rows of the status and message