@@ -2,6 +2,8 @@
 
  * tagmanager/c.c:
    Fix parsing C arrays (broken in r1952, oops).
+ * src/keybindings.c:
+   Don't flicker menubar when typing Shift-[a-z] in the VTE.
 
 
 2007-12-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
